--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>
         <span class="big">L</span>lalalalalalalalalallalalallalalalalla
     </p>
-    <img src="" alt="Oppy">
-    <a href="https://google.com" target="_blank">My instragram</a>
+    <img src="./oppsmile.jpg" alt="Oppy">
+    <a href="https://www.instagram.com/tnpnocap_.com" target="_blank">My instragram</a>
 </body>
 </html>
