--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <span class="big">L</span>lalalalalalalalalallalalallalalalalla
     </p>
     <img src="./oppsmile.jpg" alt="Oppy">
-    <a href="https://www.instagram.com/tnpnocap_.com" target="_blank">My instragram</a>
+    <a href="https://www.instagram.com/tnpnocap_/" target="_blank">My instragram</a>
 </body>
 </html>
