--- a/ITFlab.html
+++ b/ITFlab.html
@@ -13,14 +13,13 @@
     <h2 id="name">Thanapol Wankhamgood</h2>
     <h3 id="nickname">Auto</h3>
     <h1 id="me" >About ME</h1>
-    <a id="link" href="https://google.com" target="_blank"><p style="text-align: center;">My instragram</p></a>
+    <a id="link" href="https://www.instagram.com/tnpnocap_/" target="_blank"><p style="text-align: center;">My instragram</p></a>
     <div class="container">
         <p id="first" class="whitesmoketext", style="color: white; font-size: 30px;">
             "I Am Become The Death Who Destroy The World"
         </p>
         </p>
     </div>
-    
 
 </body>
 </body>
