--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <html lang="en">
 <head>
     <title> my website</title>
-    <link rel="stylesheet" href="./style.css"
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1 id="websiteTitle"> My portfolio</h1>
-    <h1>Another Title </h1>
+    <h1 id="websiteTitle">My Resume</h1>
+    <div  style="text-align: center;">
+        <img src="./oppsmile.jpg" alt="Oppy" width="640">
+    </div>
+
+    <h2 id="name">Thanapol Wankhamgood</h2>
+    <h3 id="nickname">Auto</h3>
+    <h1 id="me" >About ME</h1>
+    <a id="link" href="https://www.instagram.com/tnpnocap_/" target="_blank"><p style="text-align: center;">My instragram</p></a>
     <div class="container">
-        <p id="first" class="redText">
-            lalalalalalalalalalallalalallalalalalla
+        <p id="first" class="whitesmoketext", style="color: white; font-size: 30px;">
+            "I Am Become The Death Who Destroy The World"
         </p>
-        <p class="redText">
-            lalalalalalalalalalallalalallalalalalla
         </p>
     </div>
-    <p>
-        <span class="big">L</span>lalalalalalalalalallalalallalalalalla
-    </p>
-    <img src="./oppsmile.jpg" alt="Oppy">
-    <a href="https://www.instagram.com/tnpnocap_/" target="_blank">My instragram</a>
+
+</body>
 </body>
 </html>
